feat(configuration): Update Dockerfile to conditionally copy appsettings.json from example if not provided

--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -1,15 +1,46 @@
 {
-  "Discord": {
-    "Token": "your-discord-bot-token",
-    "Prefix": "!amq",
-    "ActivityMessage": "Chatting with AI",
-    "CommandsGuildId": null
-  },
   "Bot": {
-    "Name": "Amiquin",
-    "PrintLogo": false,
+    "MaxTokens": 20000,
     "MessageFetchCount": 40,
-    "MaxTokens": 20000
+    "Name": "Amiquin",
+    "PrintLogo": false
+  },
+  "ConnectionStrings": {
+    "AmiquinContext": "Data Source=Data/Database/amiquin.db"
+  },
+  "DataPaths": {
+    "Configuration": "Configuration",
+    "Logs": "Data/Logs",
+    "Messages": "Data/Messages",
+    "Plugins": "Data/Plugins",
+    "Sessions": "Data/Sessions"
+  },
+  "Database": {
+    "ConnectionString": "Server=localhost;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;",
+    "LogsPath": "/Amiquin/Data/Logs",
+    "Mode": 1,
+    "SQLitePath": "Data Source=/Amiquin/Data/Amiquin.db"
+  },
+  "Discord": {
+    "ActivityMessage": "Chatting with AI",
+    "CommandsGuildId": null,
+    "Prefix": "!amq",
+    "Token": "your-discord-bot-token"
+  },
+  "External": {
+    "NewsApiUrl": "https://inshorts.com/"
+  },
+  "JobManager": {
+    "DefaultMaxRetryAttempts": 3,
+    "DefaultTimeoutSeconds": 300,
+    "EnableAutoRestart": true,
+    "HealthCheckIntervalSeconds": 300,
+    "MaxPendingJobs": 50,
+    "MaxPendingStreams": 25,
+    "MaxQueueTimeoutSeconds": 60,
+    "MaxTimeoutMonitors": 25,
+    "MaximumJobIntervalSeconds": 86400,
+    "MinimumJobIntervalSeconds": 5
   },
   "LLM": {
     "DefaultProvider": "OpenAI",
@@ -19,110 +50,110 @@
     "GlobalTemperature": 0.6,
     "GlobalTimeout": 120,
     "Providers": {
-      "OpenAI": {
-        "Enabled": true,
-        "ApiKey": "sk-your-openai-api-key",
-        "BaseUrl": "https://api.openai.com/v1/",
-        "DefaultModel": "gpt-4o-mini",
-        "Models": {
-          "gpt-4o": {
-            "Name": "GPT-4 Omni",
-            "MaxTokens": 128000,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gpt-4o-mini": {
-            "Name": "GPT-4 Omni Mini",
-            "MaxTokens": 128000,
-            "MaxOutputTokens": 16384,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gpt-4-turbo": {
-            "Name": "GPT-4 Turbo",
-            "MaxTokens": 128000,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gpt-4": {
-            "Name": "GPT-4",
-            "MaxTokens": 8192,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          }
-        }
-      },
-      "Grok": {
-        "Enabled": false,
-        "ApiKey": "xai-your-grok-api-key",
-        "BaseUrl": "https://api.x.ai/v1/",
-        "DefaultModel": "grok-3",
-        "Models": {
-          "grok-3": {
-            "Name": "Grok 3 - Latest Stable",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "grok-3-mini": {
-            "Name": "Grok 3 Mini - Fast & Efficient",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "grok-4-0709": {
-            "Name": "Grok 4 (July 2024) - Most Advanced",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "grok-beta": {
-            "Name": "Grok Beta - Experimental",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          }
-        }
-      },
       "Gemini": {
-        "Enabled": false,
         "ApiKey": "your-gemini-api-key",
         "BaseUrl": "https://generativelanguage.googleapis.com/",
         "DefaultModel": "gemini-1.5-flash",
-        "SafetyThreshold": "BLOCK_NONE",
+        "Enabled": false,
         "Models": {
-          "gemini-1.5-pro": {
-            "Name": "Gemini 1.5 Pro",
-            "MaxTokens": 2097152,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
           "gemini-1.5-flash": {
-            "Name": "Gemini 1.5 Flash",
-            "MaxTokens": 1048576,
             "MaxOutputTokens": 8192,
+            "MaxTokens": 1048576,
+            "Name": "Gemini 1.5 Flash",
             "SystemMessage": null,
             "Temperature": null
           },
           "gemini-1.5-flash-8b": {
-            "Name": "Gemini 1.5 Flash 8B",
-            "MaxTokens": 1048576,
             "MaxOutputTokens": 8192,
+            "MaxTokens": 1048576,
+            "Name": "Gemini 1.5 Flash 8B",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gemini-1.5-pro": {
+            "MaxOutputTokens": 8192,
+            "MaxTokens": 2097152,
+            "Name": "Gemini 1.5 Pro",
             "SystemMessage": null,
             "Temperature": null
           },
           "gemini-pro": {
-            "Name": "Gemini Pro",
-            "MaxTokens": 32768,
             "MaxOutputTokens": 8192,
+            "MaxTokens": 32768,
+            "Name": "Gemini Pro",
+            "SystemMessage": null,
+            "Temperature": null
+          }
+        },
+        "SafetyThreshold": "BLOCK_NONE"
+      },
+      "Grok": {
+        "ApiKey": "xai-your-grok-api-key",
+        "BaseUrl": "https://api.x.ai/v1/",
+        "DefaultModel": "grok-3",
+        "Enabled": false,
+        "Models": {
+          "grok-3": {
+            "MaxOutputTokens": 8192,
+            "MaxTokens": 131072,
+            "Name": "Grok 3 - Latest Stable",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "grok-3-mini": {
+            "MaxOutputTokens": 4096,
+            "MaxTokens": 131072,
+            "Name": "Grok 3 Mini - Fast & Efficient",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "grok-4-0709": {
+            "MaxOutputTokens": 8192,
+            "MaxTokens": 131072,
+            "Name": "Grok 4 (July 2024) - Most Advanced",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "grok-beta": {
+            "MaxOutputTokens": 4096,
+            "MaxTokens": 131072,
+            "Name": "Grok Beta - Experimental",
+            "SystemMessage": null,
+            "Temperature": null
+          }
+        }
+      },
+      "OpenAI": {
+        "ApiKey": "sk-your-openai-api-key",
+        "BaseUrl": "https://api.openai.com/v1/",
+        "DefaultModel": "gpt-4o-mini",
+        "Enabled": true,
+        "Models": {
+          "gpt-4": {
+            "MaxOutputTokens": 4096,
+            "MaxTokens": 8192,
+            "Name": "GPT-4",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gpt-4-turbo": {
+            "MaxOutputTokens": 4096,
+            "MaxTokens": 128000,
+            "Name": "GPT-4 Turbo",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gpt-4o": {
+            "MaxOutputTokens": 4096,
+            "MaxTokens": 128000,
+            "Name": "GPT-4 Omni",
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gpt-4o-mini": {
+            "MaxOutputTokens": 16384,
+            "MaxTokens": 128000,
+            "Name": "GPT-4 Omni Mini",
             "SystemMessage": null,
             "Temperature": null
           }
@@ -130,161 +161,89 @@
       }
     }
   },
-  "External": {
-    "NewsApiUrl": "https://inshorts.com/"
-  },
-  "Voice": {
-    "TTSModelName": "en_GB-northern_english_male-medium",
-    "PiperCommand": "piper",
-    "Enabled": true
-  },
-  "Database": {
-    "Mode": 1,
-    "ConnectionString": "Server=localhost;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;",
-    "SQLitePath": "Data Source=/Amiquin/Data/Amiquin.db",
-    "LogsPath": "/Amiquin/Data/Logs"
-  },
-  "ConnectionStrings": {
-    "AmiquinContext": "Data Source=Data/Database/amiquin.db"
-  },
-  "DataPaths": {
-    "Logs": "Data/Logs",
-    "Messages": "Data/Messages",
-    "Sessions": "Data/Sessions",
-    "Plugins": "Data/Plugins",
-    "Configuration": "Configuration"
-  },
-  "SessionManagement": {
-    "MaxSessionsPerUser": 5,
-    "InactivityTimeoutMinutes": 120,
-    "CleanupIntervalMinutes": 30,
-    "MaxHistoryLength": 50
-  },
-  "JobManager": {
-    "HealthCheckIntervalSeconds": 300,
-    "MaxPendingJobs": 50,
-    "MaxPendingStreams": 25,
-    "MaxTimeoutMonitors": 25,
-    "DefaultTimeoutSeconds": 300,
-    "MaxQueueTimeoutSeconds": 60,
-    "EnableAutoRestart": true,
-    "DefaultMaxRetryAttempts": 3,
-    "MinimumJobIntervalSeconds": 5,
-    "MaximumJobIntervalSeconds": 86400
-  },
   "Scrappers": {
-    "CacheSize": 200,
     "CacheExpirationMinutes": 60,
+    "CacheSize": 200,
     "Providers": [
       {
-        "SourceName": "Luscious.net",
-        "BaseUrl": "https://www.luscious.net",
         "AppendBaseUrl": false,
-        "Enabled": false,
-        "TimeoutSeconds": 30,
-        "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36",
+        "BaseUrl": "https://www.luscious.net",
+        "Enabled": true,
         "ExtractionSteps": [
           {
-            "Name": "Get Random Albums",
-            "Url": "https://www.luscious.net/albums/list/",
-            "ExtractionRegex": "/albums/([^/]+)/",
             "CaptureGroup": 1,
             "ExtractMultiple": true,
+            "ExtractionRegex": "href=\"(/albums/[^\"]+)\"",
+            "Name": "Get Album List",
+            "RandomizeResults": true,
             "RepetitionCount": 5,
-            "RandomizeResults": true,
-            "SelectHighestResolution": false
+            "Url": "https://www.luscious.net/hentai/?page={random(1...100)}"
           },
           {
-            "Name": "Get Album Images",
-            "Url": "https://www.luscious.net/albums/{randomResult}/",
-            "ExtractionRegex": "/pictures/([^/]+)/",
             "CaptureGroup": 1,
             "ExtractMultiple": true,
-            "RepetitionCount": 1,
+            "ExtractionRegex": "href\\s*=\\s*[\"\"'](\\/?(?:albums\\/[^\"\"']+|pictures\\/album\\/[^\"\"']+))[\"\"']",
+            "Name": "Get Slideshow URLs",
             "RandomizeResults": true,
-            "SelectHighestResolution": false
+            "RepetitionCount": 5,
+            "Url": "https://www.luscious.net{randomResult}"
           },
           {
-            "Name": "Get Image URLs",
-            "Url": "https://www.luscious.net/pictures/{randomResult}/",
-            "ExtractionRegex": "\"(https://[^\"]+\\.(?:1680|1024)x0\\.[^\"]+)\"",
             "CaptureGroup": 1,
-            "ExtractMultiple": false,
-            "RepetitionCount": 1,
-            "RandomizeResults": false,
-            "SelectHighestResolution": true
+            "ExtractMultiple": true,
+            "ExtractionRegex": "<source srcset=\"(https://ah-img\\.luscious\\.net/[^\"]+\\.(\\d+)x0\\.[^\"]+)\"",
+            "Name": "Extract Full-Size Images",
+            "RandomizeResults": true,
+            "RepetitionCount": 15,
+            "SelectHighestResolution": true,
+            "Url": "https://www.luscious.net{randomResult}"
           }
-        ]
+        ],
+        "Name": "Luscious",
+        "SourceName": "Luscious.net",
+        "TimeoutSeconds": 30,
+        "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36"
       }
     ]
   },
   "Serilog": {
+    "Enrich": ["FromLogContext", "WithThreadId", "WithEnvironmentName"],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "System": "Warning",
-        "Microsoft": "Warning",
         "Discord": "Information",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "System": "Warning"
       }
+    },
+    "Properties": {
+      "Application": "Amiquin"
     },
     "WriteTo": [
       {
         "Name": "Console"
       },
       {
-        "Name": "File",
         "Args": {
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}] [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}",
           "path": "Data/Logs/amiquin-.log",
-          "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
-          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}] [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
-        }
+          "rollingInterval": "Day"
+        },
+        "Name": "File"
       }
-    ],
-    "Enrich": ["FromLogContext", "WithThreadId", "WithEnvironmentName"],
-    "Properties": {
-      "Application": "Amiquin"
-    }
+    ]
   },
-  "Scrappers": {
-    "Luscious": {
-      "SourceName": "Luscious.net",
-      "BaseUrl": "https://www.luscious.net",
-      "AppendBaseUrl": true,
-      "TimeoutSeconds": 30,
-      "UserAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36",
-      "Enabled": true,
-      "ExtractionSteps": [
-        {
-          "Name": "Get Album List",
-          "Url": "https://www.luscious.net/hentai/?page={random(1...100)}",
-          "ExtractionRegex": "href=\"(/albums/[^\"]+)\"",
-          "CaptureGroup": 1,
-          "ExtractMultiple": true,
-          "RepetitionCount": 3,
-          "RandomizeResults": true
-        },
-        {
-          "Name": "Get Slideshow URLs",
-          "Url": "https://www.luscious.net{randomResult}",
-          "ExtractionRegex": "href\\s*=\\s*[\"\"'](\\/?(?:albums\\/[^\"\"']+|pictures\\/album\\/[^\"\"']+))[\"\"']",
-          "CaptureGroup": 1,
-          "ExtractMultiple": true,
-          "RepetitionCount": 1,
-          "RandomizeResults": true
-        },
-        {
-          "Name": "Extract Full-Size Images",
-          "Url": "https://www.luscious.net{randomResult}",
-          "ExtractionRegex": "<source srcset=\"(https://ah-img\\.luscious\\.net/[^\"]+\\.(\\d+)x0\\.[^\"]+)\"",
-          "CaptureGroup": 1,
-          "ExtractMultiple": true,
-          "RepetitionCount": 10,
-          "RandomizeResults": false,
-          "SelectHighestResolution": true
-        }
-      ]
-    }
+  "SessionManagement": {
+    "CleanupIntervalMinutes": 30,
+    "InactivityTimeoutMinutes": 120,
+    "MaxHistoryLength": 50,
+    "MaxSessionsPerUser": 5
+  },
+  "Voice": {
+    "Enabled": true,
+    "PiperCommand": "piper",
+    "TTSModelName": "en_GB-northern_english_male-medium"
   }
 }
