--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -241,6 +241,35 @@
     "MaxHistoryLength": 50,
     "MaxSessionsPerUser": 5
   },
+  "Memory": {
+    "Enabled": true,
+    "MaxMemoriesPerSession": 1000,
+    "MaxContextMemories": 10,
+    "SimilarityThreshold": 0.7,
+    "MinImportanceScore": 0.3,
+    "MinMessagesForMemory": 3,
+    "AutoCleanup": true,
+    "CleanupOlderThanDays": 30,
+    "EmbeddingModel": "text-embedding-3-small",
+    "MemoryTypeImportance": {
+      "summary": 0.8,
+      "fact": 0.9,
+      "preference": 0.7,
+      "context": 0.6,
+      "emotion": 0.5,
+      "event": 0.7
+    },
+    "Qdrant": {
+      "Host": "localhost",
+      "Port": 6334,
+      "UseHttps": false,
+      "ApiKey": null,
+      "CollectionName": "amiquin_memories",
+      "VectorSize": 1536,
+      "Distance": "Cosine",
+      "AutoCreateCollection": true
+    }
+  },
   "Voice": {
     "Enabled": true,
     "PiperCommand": "piper",
