--- a/.env.example
+++ b/.env.example
@@ -119,6 +119,44 @@ AMQ_DataPaths__Plugins=Data/Plugins
 AMQ_DataPaths__Configuration=Configuration
 
 # ======================
+# Memory & Vector Database Configuration
+# ======================
+
+# Memory System Settings
+AMQ_Memory__Enabled=true
+AMQ_Memory__MaxMemoriesPerSession=1000
+AMQ_Memory__MaxContextMemories=10
+AMQ_Memory__SimilarityThreshold=0.7
+AMQ_Memory__MinImportanceScore=0.3
+AMQ_Memory__MinMessagesForMemory=3
+AMQ_Memory__AutoCleanup=true
+AMQ_Memory__CleanupOlderThanDays=30
+AMQ_Memory__EmbeddingModel=text-embedding-3-small
+
+# Qdrant Vector Database Configuration
+AMQ_Memory__Qdrant__Host=localhost
+AMQ_Memory__Qdrant__Port=6334
+AMQ_Memory__Qdrant__UseHttps=false
+AMQ_Memory__Qdrant__CollectionName=amiquin_memories
+AMQ_Memory__Qdrant__VectorSize=1536
+AMQ_Memory__Qdrant__Distance=Cosine
+AMQ_Memory__Qdrant__AutoCreateCollection=true
+# AMQ_Memory__Qdrant__ApiKey=your-qdrant-api-key-here  # Optional for cloud instances
+
+# ======================
+# Qdrant Docker Configuration
+# ======================
+AMQ_QDRANT_HTTP_PORT=6333
+AMQ_QDRANT_GRPC_PORT=6334
+AMQ_QDRANT_WEB_UI_PORT=3000
+AMQ_QDRANT_LOG_LEVEL=INFO
+AMQ_QDRANT_WEB_UI_ENABLED=false
+
+# For Docker Compose - Qdrant connection
+# When running with Docker Compose, use the service name as host:
+# AMQ_Memory__Qdrant__Host=qdrant
+
+# ======================
 # Voice/TTS Configuration (Optional)
 # ======================
 AMQ_Voice__TTSModelName=en_GB-northern_english_male-medium
