--- a/source/Amiquin.Core/Amiquin.Core.csproj
+++ b/source/Amiquin.Core/Amiquin.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250728.601"/>
+    <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250728.601" />
     <PackageReference Include="Jiro.Shared" Version="1.4.4">
       <ExcludeAssets>contentFiles</ExcludeAssets>
     </PackageReference>
@@ -19,7 +19,9 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.VectorData.Abstractions" Version="9.7.0" />
     <PackageReference Include="OpenAI" Version="2.1.0" />
+    <PackageReference Include="Qdrant.Client" Version="1.15.0" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
