--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - prod-cache
       - prod-full
     container_name: mysql-${AMQ_BOT_NAME:-amiquin}
-    image: mysql:${MYSQL_VERSION:-8.0}
+    image: mysql:${MYSQL_VERSION:-latest}
     restart: unless-stopped
     env_file:
       - .env
@@ -317,4 +317,4 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.20.0.0/16
+        - subnet: 172.22.0.0/16
