refactor: Rename persona references to system message in codebase and update related tests

--- a/docker-compose.cached.yml
+++ b/docker-compose.cached.yml
@@ -90,8 +90,8 @@ services:
       # Optional: Custom configuration
       - ./config/appsettings.production.json:/home/app/amiquin/build/appsettings.json:ro
       
-      # Optional: Custom persona and messages
-      - ./config/Persona.md:/home/app/amiquin/build/Messages/Persona.md:ro
+      # Optional: Custom system message and messages
+      - ./config/System.md:/home/app/amiquin/build/Messages/System.md:ro
     ports:
       - "8080:8080"
     healthcheck:
