Refactor configuration loading and Dockerfile structure; enhance session management in tests
- Updated Program.cs to allow appsettings.json path to be set via environment variable.
- Modified Dockerfile to create a more organized directory structure for application data.
- Added handling for copying configuration files and setting environment variables in Dockerfile.
- Enhanced CommandHandlerService to use using statements for better resource management.
- Integrated SessionManagerService into MessageCacheService integration tests for improved session handling.
- Updated various unit and integration tests to reflect changes in service behavior and ensure proper handling of null guild scenarios.
- Refactored PersonaService tests to improve clarity and ensure correct fallback behavior when BotContextAccessor is not initialized.

--- a/.env.example
+++ b/.env.example
@@ -173,6 +173,13 @@ AMQ_Bot__PrintLogo=false
 AMQ_Bot__MessageFetchCount=40
 
 # ======================
+# Configuration File Path
+# ======================
+# Path to appsettings.json file - defaults to {AppDirectory.BaseDirectory}/Data/Configuration/appsettings.json
+# For Docker volumes, set to /app/Data/Configuration/appsettings.json
+AMQ_APPSETTINGS_PATH=/app/Data/Configuration/appsettings.json
+
+# ======================
 # Logging Configuration Overrides (Optional)
 # ======================
 AMQ_Serilog__MinimumLevel__Default=Information
